modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link rel="icon" type="image/x-icon" href="./d23f01ae958b58fe62eb54d667e691341fed3dc8d8f8908a8dbc5a16fb8f.png">
         <link rel="stylesheet" href="./style.css">
         </head>
+        <header>
+            <h1>warning this will only work if you are connected to your robot</h1>
+        </header>
         <body>
             <iframe src="http://limelight.local:5800" style="border:0px #ffffff none;" name="limelight" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
             <iframe src="http://photonvision.local:1181" style="border:0px #ffffff none;" name="photonvision" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="600px" allowfullscreen></iframe>
